--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "@types/node": "^22.5.0",
+    "moment": "^2.30.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
